syntax = "proto3";

package registry;
option go_package = "github.com/lack-io/vine/proto/services/registry;registry";

import "github.com/lack-io/vine/proto/apis/registry/registry.proto";

service Registry {
  rpc GetService(GetRequest) returns (GetResponse) {};
  rpc Register(registry.Service) returns (EmptyResponse) {};
  rpc Deregister(registry.Service) returns (EmptyResponse) {};
  rpc ListServices(ListRequest) returns (ListResponse) {};
  rpc Watch(WatchRequest) returns (stream registry.Result) {};
}

message EmptyResponse {}

message GetRequest {
  string service = 1;
}

message GetResponse {
  repeated registry.Service services = 1;
}

message ListRequest {
  // TODO: filtering
}

message ListResponse {
  repeated registry.Service services = 1;
}

message WatchRequest {
  // service is optional
  string service = 1;
}
